--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -298,7 +298,7 @@ cite{
 	background: url(../images/navigation_marker.gif) no-repeat 175px 12px;
 }
 #navigation ul{
-	
+
 }
 #navigation ul li{
 	display: inline-block;
@@ -403,33 +403,33 @@ cite{
 	padding-bottom: 40px;
 }
 img.alignleft {
-	float:left; 
+	float:left;
 	margin-right: 29px;
 	margin-bottom: 20px;
 }
 img.alignright {
-	float:right; 
+	float:right;
 	margin-left: 29px;
 	margin-bottom: 20px;
 }
 img.aligncenter {
-	display: block; 
-	margin-right: auto; 
+	display: block;
+	margin-right: auto;
 	margin-left: auto;
 }
 .alignleft {
-	float:left; 
+	float:left;
 	margin-right: 29px;
 	margin-bottom: 16px;
 }
 .alignright {
-	float:right; 
+	float:right;
 	margin-left: 29px;
 	margin-bottom: 16px;
 }
 .aligncenter {
-	display: block; 
-	margin-right: auto; 
+	display: block;
+	margin-right: auto;
 	margin-left: auto
 }
 .chb_devider{
@@ -1339,7 +1339,7 @@ img.aligncenter {
 	overflow: hidden;
 }
 .slider .sliderContent .item{
-	position:absolute;	
+	position:absolute;
 	top:0;
 	right:0;
 }
@@ -1980,7 +1980,7 @@ img.aligncenter {
 	float: right;
 }
 .comment_form .fld_box.center{
-	padding: 0 41px 0 40px;	
+	padding: 0 41px 0 40px;
 }
 .comment_form label{
 	font-weight: bold;
@@ -2347,7 +2347,7 @@ img.aligncenter {
 	float: right;
 }
 .contact_form .fld_box.center{
-	padding: 0 39px 0 40px;	
+	padding: 0 39px 0 40px;
 }
 .contact_form label{
 	font-weight: bold;
@@ -2602,7 +2602,7 @@ ul.personal_list li .grey_area span{
 .sell_box .foto_wrapper{
 	float: right;
 	width: 140px;
-	margin: 6px 0 20px 20px;
+	margin: 30px;
 }
 .sell_box .foto_wrapper.last{
 	margin-left: 0;
@@ -2740,7 +2740,7 @@ ul.personal_list li .grey_area span{
 }
 .cars_categories a span,
 .steps a span{
-	padding: 0;	
+	padding: 0;
 	background: none;
 	border-radius: 0;
 	color: #798FA1;
@@ -2818,7 +2818,7 @@ ul.personal_list li .grey_area span{
 	background: url(../images/sort_marker.gif) no-repeat left 11px;
 }
 .drop_list .active span{
-	background: #FFFFFF;	
+	background: #FFFFFF;
 	border:1px solid #D1D5DC;
 	border-bottom: 0;
 	border-radius: 5px 5px 0 0;
@@ -3135,7 +3135,7 @@ ul.personal_list li .grey_area span{
 }
 .features_table .line .left{
 	float: right;
-	width: 205px;	
+	width: 205px;
 }
 .wanted_line{
 	overflow: hidden;
